fix: Wrap more

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ summary {
 
 pre {
 	white-space: pre-wrap;
+	word-wrap: break-word;
 }
 
 table {
